# ArbitrageScaner

./: CMakeLists.txt  README.md  arbitragescaner.cpp  arbitragescaner.h  main.cpp
src/marketManager/: marketmanager.cpp  marketmanager.h
src/marketManager/base/: marketapi.cpp  marketapi.h
src/marketManager/markets/: bingxapi.cpp  bingxapi.h  bybitapi.cpp  bybitapi.h  gateioapi.cpp  gateioapi.h  htxapi.cpp  htxapi.h  mexcapi.cpp  mexcapi.h
src/telegram/: telegramapi.cpp  telegramapi.h
